k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kitos
  labels:
    app.kubernetes.io/part-of: kitos
